Align carousel items correctly

--- a/home.css
+++ b/home.css
@@ -133,6 +133,9 @@ a {
     width: 210px;
     outline: none;
 }
+.carousel-item{
+    align-items: start;
+}
 @media (max-width: 768px) {
     .carousel-inner .carousel-item > div {
         display: none;
